hphp/test/zend/bad/magic_methods_004.php
<?php

class foo {	
	protected function __unset($a) {
		print "unset\n";
	}
}

?>